added new collection and fix
