# routes/index.js
@@ -9,5 +9,6 @@ router.get('/', (req, res) => {
 });
 
 router.use('/users', require('./users'));
+router.use("/activities", require("./activities"));
 
 module.exports = router;
